# blip-blop

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  apply-format.sh
assets/: uk.dat.json
config/: settings.json
converter/: cin.js  dat.js  gfx.js  imageParser.js  input  lft.js  lst.js  lvl.js  mbk.js  mp3.js  output  package-lock.json  package.json  rpg.js  sfx.js  tab.js
include/: json.h
src/: base64.h  bbconst.h  (+424 more)
vc-projects/Blip_n_Blop_3/: .gitignore  CMakeLists.txt  base64.h  ben_divers.h  bonus.h  bonus_laser.h  bonus_lf.h  bonus_tonneau.h  build_debug.sh  build_release.sh  bulle.h  cine_player.cpp  cine_player.h  config.cpp  control_p1.h  control_p2.h  dd_gfx.h  emscripten_browser_file.h  ennemi_bisou_auto.h  ennemi_bisou_boom.h  ennemi_bisou_chaman.h  ennemi_bisou_ciel.h  ennemi_bisou_nuage.h  ennemi_bisou_sib.h  ennemi_bisou_zombi.h  ennemi_bulbizarre.h  ennemi_bulbizarre_heros.h  ennemi_com.h  ennemi_com_heros.h  ennemi_com_volant.h  ennemi_diabolo.cpp  ennemi_flameche.h  ennemi_flameche_heros.h  ennemi_grand_smurf.h  ennemi_knukles.h  ennemi_lara.cpp  ennemi_lemmings.h  ennemi_mario.h  ennemi_mario_hologramme.h  ennemi_mariotapette.h  (+115 more)
vc-projects/Blip_n_Blop_3/assets/: bb.lst.json
vc-projects/Blip_n_Blop_3/assets/cin/: intro.cin.json
vc-projects/Blip_n_Blop_3/assets/gfx/: bb.gfx.json  bisoudec2.gfx.json  bisoudec3.gfx.json  bisouenn.gfx.json  bisoufond.gfx.json  bisoufond3.gfx.json  blip.gfx.json  brief1_1.gfx.json  brief6.gfx.json  brief6_1.gfx.json  brief7.gfx.json  credits.gfx.json  inter.gfx.json  lemfond.gfx.json  pokeenn.gfx.json  pokefond.gfx.json  snorkenn2.gfx.json  snorkfond2.gfx.json  snorkfonda.gfx.json  snufpplan1.gfx.json  videobossenn.gfx.json  videoenn.gfx.json  videofonda.gfx.json  videofondboss.gfx.json
vc-projects/Blip_n_Blop_3/assets/lft/: ammo1.lft.json  cool.lft.json  menus.lft.json
vc-projects/Blip_n_Blop_3/assets/lvl/: bisous1.lvl.json  bisous2.lvl.json  bisous3.lvl.json  dork.lvl.json  snorkniv.lvl.json  snuf1.lvl.json  snuf2.lvl.json  videoboss.lvl.json
vc-projects/Blip_n_Blop_3/assets/mbk/: bisou.mbk.json  credits.mbk.json  dork.mbk.json  end.mbk.json  inter.mbk.json  interl.mbk.json  lem.mbk.json  snork.mbk.json  snuf.mbk.json  video.mbk.json  videoboss.mbk.json
vc-projects/Blip_n_Blop_3/assets/rpg/: bisou1.rpg.json  finalboss.rpg.json  lem.rpg.json  snork.rpg.json  snuff.rpg.json  video.rpg.json  videoboss.rpg.json
vc-projects/Blip_n_Blop_3/assets/sfx/: bb.sfx.json  bisou.sfx.json  boss.sfx.json  dork.sfx.json  lem.sfx.json  misc.sfx.json  smurf.sfx.json  video.sfx.json
vc-projects/Blip_n_Blop_3/config/: hiscores.json  settings.json
vc-projects/Blip_n_Blop_3/data/: bb.cfg
vc-projects/Blip_n_Blop_3/menus/: menu_list.cpp  pause_menu.cpp
(+80 files in other folders)
